AM_CPPFLAGS = -I$(top_srcdir)/src
lib_LTLIBRARIES = libwebpmux.la

libwebpmux_la_SOURCES = muxi.h \
                        muxedit.c muxinternal.c muxread.c
libwebpmux_la_LDFLAGS = -version-info 0:0:0
libwebpmuxinclude_HEADERS = ../webp/mux.h ../webp/types.h
libwebpmuxincludedir = $(includedir)/webp
